Fix the underline in numbers on mobile and the issue of numbers not splitting

--- a/index.css
+++ b/index.css
@@ -401,6 +401,7 @@ button{
     .card-number{
         font-size: 18px;
         margin-top: 1.2rem;
+        text-decoration: none !important;
     }
     
     .cvc{
